conf_kubernetes/cast-db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  labels:
    app: cast-db
  name: cast-db
  namespace: default
spec:
  replicas: 1
  serviceName: cast-db
  selector:
    matchLabels:
      app: cast-db
  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: cast_db_dev
            - name: POSTGRES_PASSWORD
              value: cast_db_password
            - name: POSTGRES_USER
              value: cast_db_username
          image: postgres:12.1-alpine
          name: cast-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data-cast
      restartPolicy: Always
      volumes:
        - name: postgres-data-cast
          persistentVolumeClaim:
            claimName: postgres-data-cast
status: {}
