conf_kubernetes/cast_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cast-service
  name: cast_service
  namespace: default
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8000
  selector:
    app: cast-service
status:
  loadBalancer: {}
