conf_kubernetes/ingress-fastapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  tls:
  - hosts:
    - jenkins.devops-youss.cloudns.ph
    secretName: letsencrypt-prod
  ingressClassName: traefik
  rules:
  - host: jenkins.devops-youss.cloudns.ph
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/casts
        backend:
          service:
            name: cast-service
            port: 
              number: 8000
      - pathType: Prefix
        path: /api/v1/movies
        backend:
          service:
            name: movie-service
            port: 
              number: 8000
